filter for light indicator added & parametrer improved
git-svn-id: svn+ssh://nina.grame.fr/home/svn/Elody@61 24ffd016-8a14-0410-89a8-9ec6ae8e91d8